--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,45 @@
-@tailwind base;
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+*{
+  box-sizing: border-box;
+}
+
+html,
+body{
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -24,4 +65,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
