--- a/styles/Register.module.css
+++ b/styles/Register.module.css
@@ -6,14 +6,10 @@
     height: auto;
     align-items: center;
     justify-content: center;
-    /* background-color: black; */
 }
 
 .container{
     width: 85%;
-    /* height: 100%; */
-    /* position: inherit; */
-    /* background-color: rgb(42, 99, 150); */
     background-color: aliceblue;
     padding: 12px;
 }
@@ -21,25 +17,20 @@
 .registerHeader{
   height: 7rem;
   overflow: hidden;
-  /* position: absolute; */
-  /* background-color: red; */
 }
 
 .registerBody{
-    /* background-color: gold; */
     margin-top: 3.75rem;
     display: flex;
     height: 100%;
     width: 100%;
-    
-
+    flex-direction: row;
 }
 
 .registerLeft{
-  /* background-color: red; */
   display: flex;
   flex-direction: column;
-  /* position: relative; */
+  gap: 20px;
   width: 50%;
 }
 
@@ -58,29 +49,20 @@
 }
 
 .registerRight{
-    /* background-color: blue; */
-    /* width: 50%; */
     width: 50%;
-    /* height: 100vh; */
     position: relative;
 
 }
 
 .registerWrapper .registerBody .registerLeft .registerForm {
-    margin-top: 10px;
-    /* background-color: blue; */
-    /* border: 5px solid blue; */
-    height: 3rem;
-    border: 2;
+    height: 4rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .registerWrapper .registerBody .registerLeft .registerForm .btnItem {
-    display: flex;
-    position: row;
     width: 70%;
     height: 100%;
-    /* background-color: gold; */
-
 }
 
 .registerWrapper .registerBody .registerLeft .registerForm .btnItem button{
@@ -91,23 +73,22 @@
  
 
 .registerWrapper .container .registerBody .registerLeft .form{
-    /* background-color: red; */
-    /* border: 5px solid red; */
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     height: auto;
-    /* height: 50%; */
 }
 
 .registerWrapper .container .registerBody .registerLeft .form .registerInputItem{
  width: 80%;
  height: auto;
- /* background-color: gold; */
 }
 
-.registerWrapper .container .registerBody .registerLeft .form .registerInputItem .inputItem{
- width: 100%;
+.registerWrapper .container .registerBody .registerLeft .form .registerInputItem .inputItemPass{
+ width: 90%;
+ display: grid;
+ grid-template-columns: 90% 10%;
+ column-gap: 0px;
+ height: 2.38rem;
 }
 
 .registerWrapper .container .registerBody .registerLeft .form .registerInputItem .inputItem input{
@@ -119,7 +100,6 @@
     width: 80%;
     height: auto;
     margin-top: 1.25rem;
-    /* background-color: red;  */
 }
 
 
@@ -168,14 +148,12 @@
     justify-content: space-between;
     margin-top: 1.25rem;
     height: 2.38rem;
-    /* width: 50px; */
 }
 
 .btnItem button{
     cursor: pointer;
     width: 90px;
     font-weight: bold;
-    /* font-size: 20px; */
 }
 
 .submitBtn{
